--- a/example.html
+++ b/example.html
@@ -40,7 +40,7 @@
                 // loaded user object should contain those attributes
                 // this is hardcoded for testing purposes :)
                 name: 'hello',
-                email: 'world',
+                email: 'world@world.com',
                 created_at: 1234567890
                 // created_at should be a unix timestamp
                 // you can get a unix timestamp using
